# davinci-zkvm

./: .env.example  .gitignore  CHANGELOG.md  CIRCUIT.md  Cargo.toml  Dockerfile  Dockerfile.cuda  LICENSE  Makefile  README.md  docker-compose.cuda.yml  docker-compose.yml  entrypoint.sh  install.sh  paper.md  plan.md
circuit/: CIRCUIT.md  Cargo.toml
circuit/elf/: circuit.elf
circuit/src/: babyjubjub.rs  bls_fr.rs  bn254.rs  bn254_fr.rs  census.rs  consistency.rs  csp.rs  ecdsa.rs  groth16.rs  hash.rs  io.rs  kzg.rs  main.rs  poseidon.rs  results.rs  smt.rs  types.rs
data/ballot_proof_bn254/: proof_1.json  proof_100.json  proof_101.json  proof_103.json  proof_104.json  proof_107.json  proof_108.json  proof_109.json  proof_11.json  proof_110.json  proof_112.json  proof_113.json  proof_114.json  proof_115.json  proof_118.json  proof_119.json  proof_122.json  proof_123.json  proof_124.json  proof_125.json  proof_126.json  proof_127.json  proof_128.json  proof_18.json  proof_19.json  proof_21.json  proof_22.json  proof_23.json  proof_24.json  proof_25.json  proof_28.json  proof_3.json  proof_30.json  proof_32.json  proof_33.json  proof_36.json  proof_39.json  proof_40.json  proof_42.json  proof_43.json  (+99 more)
data/simple_mul_bn254/: input_1.json  input_10.json  input_100.json  input_101.json  input_102.json  input_103.json  input_104.json  input_105.json  input_106.json  input_107.json  input_108.json  input_109.json  input_11.json  input_110.json  input_111.json  input_112.json  input_113.json  input_114.json  input_115.json  input_116.json  input_117.json  input_118.json  input_119.json  input_12.json  input_120.json  input_121.json  input_122.json  input_123.json  input_124.json  input_125.json  input_126.json  input_127.json  input_128.json  input_13.json  input_14.json  input_15.json  input_16.json  input_17.json  input_18.json  input_19.json  (+345 more)
go-sdk/: README.md  batch.go  batch_test.go  builder.go  client.go  converters.go  converters_test.go  encode.go  go.mod  go.sum  loader.go  outputs.go  types.go
go-sdk/tests/: Makefile  census_test.go  csp_test.go  e2e_test.go  go.mod  groth16_test.go  kzg_test.go  loader.go  reenc_test.go  smt_test.go  (+1 more)
input-gen/: Cargo.toml
input-gen/src/: lib.rs
integration-tests/: Makefile  go.mod  groth16_test.go
service/: Cargo.toml
service/src/: config.rs  main.rs  types.rs
service/src/api/: jobs.rs  mod.rs  prove.rs
service/src/prover/: mod.rs  worker.rs
(+451 files in other folders)
