[package]
name = "davinci-zkvm-circuit"
version = "0.1.0"
edition = "2021"
default-run = "davinci-zkvm-circuit"

[dependencies]
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.15.0" }
ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-bn254 = { version = "0.4", default-features = false, features = ["curve"] }
