[package]
name = "davinci-zkvm-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "davinci-zkvm"
path = "src/main.rs"

[dependencies]
davinci-zkvm-input-gen = { path = "../input-gen" }
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
tokio-util = { version = "0.7", features = ["io"] }
